src/test/deca/codegen/valid/sansObjet/unary_minus_debug.deca
// Description :
//    Unary Minus de int
//
// Resultats :
//    Ok

{
    int a = 3;
    print(-a);
}