src/test/deca/codegen/invalid/non_initialise.deca
// Resultats :
// Erreur attendue : variable non initialisée
{
    int x;
    print(x);
}